@@ -1855,12 +1855,8 @@ static zend_bool zend_do_perform_implementation_check(zend_function *fe, zend_fu
 		return 0;
 	}
 
-	if (proto->common.return_reference != ZEND_RETURN_REFERENCE_AGNOSTIC
-	&& fe->common.return_reference != proto->common.return_reference) {
-		/* atm we cannot let internal function return by ref */
-		if (fe->type == proto->type || fe->type != ZEND_INTERNAL_FUNCTION) {
-			return 0;
-		}
+	if (fe->common.return_reference != proto->common.return_reference) {
+		return 0;
 	}
 
 	for (i=0; i < proto->common.num_args; i++) {
